2014-08-06  François Déchelle  <francois@dechelle.net>

	* added directory scanning

	* added command-line scan tool

	* moved call to module init function out of module_new

	* changed pkg-config file to add moduledir variable

2014-08-05  François Déchelle  <francois@dechelle.net>

	* added file scan using mime type

	* added modules initialization and mime types hash table creation

2014-07-18  François Déchelle  <francois@dechelle.net>

	* adding modules loading from predefined directory

2014-07-17  François Déchelle  <francois@dechelle.net>

	* added directory traversal function

2014-07-15  François Déchelle  <francois@dechelle.net>

	* initial commit

