@@ -1,3 +1,3 @@
 VERSION_MAJOR=1
-VERSION_MINOR=4
+VERSION_MINOR=0
 VERSION_PATCH=1
