@@ -1,0 +1,42 @@
+LIBUMWDSU(3)
+============
+:doctype: manpage
+
+NOM
+---
+libumwsu - librairie de scan
+
+
+SYNOPSIS
+--------
+*#include <libumwsu/scan.h>*
+
+
+DESCRIPTION
+-----------
+La fonction umwsu_open() créée une instance...
+
+
+RETURN VALUE
+------------
+*0*::
+    Succès
+
+*1*::
+    Erreur
+
+
+AUTHOR
+------
+umwd a été écrit par François Déchelle.
+
+
+RESOURCES
+---------
+Site web: <http://uhuru-solutions.com/>
+
+
+COPYING
+-------
+Copyright \(C) 2014 qui?. Free use of this software is
+granted under the terms of the GNU General Public License (GPL).
