@@ -7,6 +7,8 @@ struct umw;
 
 struct umw *umw_open(void);
 
+void umw_print(struct umw *u);
+
 void umw_close(struct umw *u);
 
 enum umw_status umw_scan_file(struct umw *umw_handle, const char *path);
