@@ -1,3 +1,9 @@
+2014-08-08  François Déchelle  <francois@dechelle.net>
+
+	* modified messages
+
+	* added documentation
+
 2014-08-06  François Déchelle  <francois@dechelle.net>
 
 	* added directory scanning
